# lark-asr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  config.example.toml  pyproject.toml  requirements-asr.txt
config/: docker.example.toml  ff1-host.example.toml
docker/: Dockerfile.asr
docs/: docker-runbook.md  ff1-current-state-2026-05-13.md
scripts/: asr_fallback.sh  bootstrap_docker_project.sh  docker_doctor.sh  install_user_services.sh  label_whisper_with_speakers.py  restore_punctuation_funasr.py  transcribe_faster_whisper.py  transcribe_funasr.py  uninstall_user_services.sh
src/lark_asr/: __init__.py  cli.py  config.py  events.py  lark.py  pipeline.py  store.py  timeutil.py
tests/: test_events.py  test_label_whisper_with_speakers.py  test_pipeline.py  test_poll.py
